Change user login response
