# docs/swagger.json
@@ -19,9 +19,6 @@
                 "consumes": [
                     "application/json"
                 ],
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "Users"
                 ],
@@ -40,8 +37,11 @@
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.loginUserResponse"
+                        "headers": {
+                            "Authorization": {
+                                "type": "string",
+                                "description": "Bearer \u003ctoken\u003e"
+                            }
                         }
                     }
                 }
@@ -51,9 +51,6 @@
             "post": {
                 "description": "Registers a new user in the app",
                 "consumes": [
-                    "application/json"
-                ],
-                "produces": [
                     "application/json"
                 ],
                 "tags": [
@@ -73,9 +70,12 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "User created successfully, returns jwt token",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.registerUserResponse"
+                        "description": "Created",
+                        "headers": {
+                            "Authorization": {
+                                "type": "string",
+                                "description": "Bearer \u003ctoken\u003e"
+                            }
                         }
                     }
                 }
@@ -85,7 +85,7 @@
             "get": {
                 "security": [
                     {
-                        "Bearer": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "Retrieve the profile of the currently authenticated user.",
@@ -161,11 +161,56 @@
                 }
             }
         },
+        "/recipes/new": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Create a new recipe with the given input data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Recipes"
+                ],
+                "summary": "Create a new recipe",
+                "parameters": [
+                    {
+                        "description": "Recipe creation data",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.createRecipeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.createRecipeRequest"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httpstatus.GlobalErrorHandlerResp"
+                        }
+                    }
+                }
+            }
+        },
         "/users/{id}": {
             "get": {
                 "security": [
                     {
-                        "Bearer": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "Retrieve detailed information of a user based on their ID.",
@@ -216,6 +261,37 @@
         }
     },
     "definitions": {
+        "controllers.createRecipeRequest": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "recipe_ingredients": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controllers.recipeIngredientRequest"
+                    }
+                },
+                "tag_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "title": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 3
+                }
+            }
+        },
         "controllers.loginUserRequest": {
             "type": "object",
             "properties": {
@@ -227,11 +303,17 @@
                 }
             }
         },
-        "controllers.loginUserResponse": {
+        "controllers.recipeIngredientRequest": {
             "type": "object",
             "properties": {
-                "token": {
-                    "type": "string"
+                "ingredient_id": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "number"
+                },
+                "unit_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -244,20 +326,12 @@
                 "password": {
                     "type": "string",
                     "maxLength": 72,
-                    "minLength": 6
+                    "minLength": 4
                 },
                 "username": {
                     "type": "string",
                     "maxLength": 255,
                     "minLength": 3
-                }
-            }
-        },
-        "controllers.registerUserResponse": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "type": "string"
                 }
             }
         },
@@ -293,7 +367,7 @@
         }
     },
     "securityDefinitions": {
-        "Bearer": {
+        "ApiKeyAuth": {
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
